update meta-data and info

--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-	"name": "stb-util-parse-query",
-	"version": "1.3.0",
-	"description": "Parse the given location search string into object.",
-	"author": {
-		"name": "Stanislav Kalashnik",
-		"email": "sk@infomir.eu"
-	},
-	"repository": "stbsdk/util-parse-query",
-	"scripts": {
-		"lint": "eslint *.js",
-		"jsdoc": "jsdoc --destination doc *.js readme.md",
-		"webpack": "webpack -d ./tests/main.js ./tests/build.js"
-	},
-	"dependencies": {
-		"stb-util-parse-query": "1.*.*"
-	},
-	"devDependencies": {
-		"jsdoc": "3.*.*",
-		"webpack": "1.*.*"
-	},
-	"keywords": [
-		"stb",
-		"sdk",
-		"device",
-		"tv",
-		"devkit",
-		"framework",
-		"util",
-		"parse",
-		"query"
-	],
-	"license": "GPL-3.0"
+    "name": "cjs-parse-query",
+    "version": "1.3.0",
+    "description": "Parse the given location search string into object.",
+    "author": {
+        "name": "Stanislav Kalashnik",
+        "email": "darkpark.main@gmail.com"
+    },
+    "repository": "cjssdk/parse-query",
+    "scripts": {
+        "lint": "eslint ./*.js",
+        "test": "node ./tests/main.js"
+    },
+    "dependencies": {
+        "cjs-parse-query": "1.*.*"
+    },
+    "devDependencies": {
+        "mocha": "2.*.*",
+        "should": "8.*.*"
+    },
+    "keywords": [
+        "commonjs",
+        "sdk",
+        "cjssdk",
+        "framework",
+        "parse",
+        "query"
+    ],
+    "license": "GPL-3.0"
 }
