--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "repository": "cjssdk/parse-query",
     "scripts": {
         "lint": "eslint ./*.js",
-        "test": "node ./tests/main.js"
+        "test": "node ./tests/main.js",
+        "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
         "cjs-parse-query": "1.*.*"
