--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "url": "https://github.com/cjssdk/query.git"
     },
     "scripts": {
-        "lint": "eslint ./*.js",
+        "lint": "eslint .",
         "test": "npm run lint",
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
