--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "url": "https://github.com/cjssdk/query.git"
     },
     "scripts": {
-        "lint": "eslint .",
+        "lint": "eslint --ignore-pattern '/docs/' .",
         "test": "npm run lint",
         "jsdoc": "jsdoc --destination docs *.js readme.md"
     },
